@startuml

'https://plantuml.com/class-diagram


package core{
class main{
  main(String[] args):void
  -testTag():void
  +apendiceA(): void
  +apendiceB(): void
  +readJson(): void
  -creatingRootForJSON(JSONObject):void
  -feedChildren(JSONObject, Component): Component
  -feedInterval(JSONArray, Task): List<Interval>
  +crearJson(): void
  +writeTreeJson(Project): JSONObject
  +writeChildrenRoot(Component): JSONObject
  -writeIntervalTask(Interval): JSONObject
  +{static}makeTreeCourses():Project
}
abstract Component{
    {abstract}#initialDate: LocalDateTime
    {abstract}#finalDate: LocalDateTime
    {abstract}#tagName: String
    {abstract}#duration: LocalDateTime
    {abstract}#parentProject: Project
    {abstract}#id:int
    {abstract}#formatter: DateTimeFormatter
    #{static}nextId:AtomicInteger
    -log: Logger
    {abstract}+findActivityById(id:int):Component
    {abstract}-updateDurationAndFinalDate(newDuration: Duration, newTimer: Time, newFinalDate: LocalDateTime): void
    {abstract}-acceptVisitor(v: Visitor): void
    #toJson(json:JSONObject):
}

Interface Visitor{
    +visitTask(task: Task): void
    +visitProject(project: Project): void
    +visitInterval( interval: Interval): void

}

class Project{
    -childrenProject:List <component>: arrayList
    -log: Logger
    -active:Boolean
    -invariant(): boolean

    +updateInitialDate(newFinalDate: LocalDateTime): void
    +addComponent(component: Component):
    +updateActiveProject()
    #acceptVisitor(v: Visitor):void
    #toJson(depth:int):JSONObject
    {abstract}+findActivityById(id:int):Component
    {abstract}-updateDurationAndFinalDate(newDuration: Duration, newTimer: Time, newFinalDate: LocalDateTime): void

}

class Task {
    #intervalList:List <interval>
    -log: Logger
    -active:Boolean
    -invariant(): boolean
    {abstract}-updateDurationAndFinalDate(newDuration: Duration, newTimer: Time, newFinalDate: LocalDateTime): void
    {abstract}-acceptVisitor(v: Visitor): void
    +addInterval(): void
    +startTask(): void
    +stopTask(): void
    {abstract}+findActivityById(id:int):Component
    +toJson(depth:int):JSONObject

}
class interval{
    -task: Task
    -finalDate:LocalDateTime
    -initialDate:LocalDateTime
    -Duration:Duration
    -clock: Clock
    -log: Logger
    -active = Boolean
    -invariant(): boolean
    {abstract}-acceptVisitor(v: Visitor): void
    {abstract}-update(ob: Observable, arg: Object): void
    +stopInterval(): void
    +toJson(depth:int):JSONObject

}

class Printer{
    -log: Logger
    -Project tree;
    -{static}dateFormatter: DateTimeFormatter

    -invariant(): Boolean
    +{abstract}visitTask(task: Task): void
    +{abstract}visitProject(project: Project): void
    +{abstract}visitInterval( interval: Interval): void

    +{abstract}update(arg0: Observable, arg1: Object)
}


class SearchTag {
    -searchTag: String
    -result: List<Component>
    -log: Logger
    -invariant(): boolean
    +{abstract}visitTask(task: Task): void
    +{abstract}visitProject(project: Project): void
    +{abstract}visitInterval( interval: Interval): void


}

package java.util{

    interface Observer {

        +{abstract}update(arg0: Observable, arg1: Object)

    }

    Abstract Observable
    {
       +{abstract}addObserver(ob: Observer)
       +{abstract}deleteObserver(ob: Observer)
       +{abstract}notifyObserver(arg0: Observable, arg1:Object)
    }



}


class Clock {
    -instanceClock: Clock
    -seconds: long
    -timer: Timer
    -log: Logger
    -clock(seconds: int)
    +getInstanceClock(seconds: int):static synchronized :Clock

}

SearchTag..|>Visitor

Printer..|>Visitor
Printer..|>Observer

main"1..n"--> Component
Project *--> "*"Component:children

(Project,Task)--down|>Component

Clock--|> Observable
interval ..|> Observer
Observable*--left>"*"Observer:observers
Task "1..n"*--> interval:interval

}






package webServer{

    class mainWebServer{
        +{static} main(String[] args):void
        +{static} webServer:void;

    }

    class WebServer{
        -currentActivity:Project
        -root:Project:final
        +webServer(root:Project)
        -findActivityById:component(id:int)

    }

    class socketThread{
        -final insocked:Socket
        -makeBodyAnswer:string(tokens:String[])
        -makeHeaderAnswer:string()
        +run:void()

    }

mainWebServer".."-right-> WebServer
socketThread<-up- WebServer
socketThread--|>Thread




}

webServer-->core



@enduml